# django-basemodels

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/django_basemodels/: __init__.py  admin.py  apps.py  celery.py  managers.py  models.py  query.py  tasks.py  utils.py
src/django_basemodels/test_app/: __init__.py  apps.py  models.py  settings.py
tests/: conftest.py  test_apps.py  test_celery.py  test_models_and_queryset.py  test_tasks.py  test_utils.py
